fix select outline in dark mode

--- a/plugins/woocommerce-blocks/assets/js/base/components/select/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/select/style.scss
@@ -4,7 +4,6 @@
 	.wc-blocks-components-select__container {
 		border-radius: $universal-border-radius;
 		box-sizing: border-box;
-		border: 1px solid $universal-border-strong;
 		background: #fff;
 		width: 100%;
 		height: 50px;
@@ -12,7 +11,6 @@
 
 		.has-dark-controls & {
 			background-color: $input-background-dark;
-			border-color: $input-border-dark;
 			color: $input-text-dark;
 
 			&:focus {
@@ -38,6 +36,7 @@
 		background: none;
 		padding: em($gap) em($gap-smaller) 0;
 		color: $input-text-active;
+		box-shadow: 0 0 0 1px $universal-border-strong;
 
 		&:focus {
 			outline: none;
@@ -46,7 +45,7 @@
 
 		.has-dark-controls & {
 			color: $input-text-dark;
-
+			box-shadow: 0 0 0 1px $input-border-dark;
 			&:focus {
 				box-shadow: 0 0 0 2px $input-border-dark;
 			}
